src/examples/errors/str_char.del
def main() -> nil {

    char my_char = "This is a test that should fail";

    return;
}